--- a/exo01.html
+++ b/exo01.html
@@ -17,4 +17,6 @@
         <h2><b>hello</b></h2>
         <h2 id="point1">hello</h2>
     </head>
-</html>cd
+    <p>first sentence</p>
+    <p>a new line in our page </p>
+</html>
